--- a/wercker.yml
+++ b/wercker.yml
@@ -1,5 +1,14 @@
 box: wercker/nodejs
 
+build:
+    steps:
+      - script:
+          name: install bower
+          code: sudo npm install -g bower
+      - script:
+          name: install bower dependencies
+          code: bower install
+
 deploy :
   steps :
     - script:
