--- a/bower.json
+++ b/bower.json
@@ -9,6 +9,7 @@
     "angular": "~1.3.0",
     "angular-route": "~1.3.0",
     "angular-bootstrap": "~0.11.2",
-    "angular-resource": "~1.3.0"
+    "angular-resource": "~1.3.0",
+    "angular-cookies": "~1.3.0"
   }
 }
